# SMPlugins

./: .gitignore  Dockerfile  README.md  smsdk.py
.github/workflows/: workflow.yml
plugins/AdpPlugin/: AdpPlugin.cpp  AdpPlugin.h  CMakeLists.txt
plugins/AdpPlugin/resources/: metrics.ini
plugins/AdpPlugin/resources/BGAnimations/: ScreenPluginsAdpPlugin background.lua
plugins/AdpPlugin/resources/Languages/: en.ini
plugins/AdpPlugin/resources/Scripts/: AdpHelper.lua
plugins/HelloWorldPlugin/: CMakeLists.txt  HelloWorldPlugin.cpp
plugins/LuaDebugPlugin/: CMakeLists.txt  LuaDebugPlugin.cpp  LuaDebugPlugin.h
plugins/WebSocketPlugin/: CMakeLists.txt  FindLibWebsocketpp.cmake  SocketHandler.cpp  package-lock.json
plugins/WebSocketPlugin/WebUI/: README.md  package-lock.json  package.json
plugins/WebSocketPlugin/WebUI/src/: App.vue  client.js  main.js
sdks/ITGmania SDK/: SMSDK.cmake  version.ini
sdks/ITGmania SDK/include/: MusicWheel.h  Preference.h  RageFileDriverMemory.h  RageUtil.h  RageUtil_AutoPtr.h  RageUtil_CircularBuffer.h  ScreenHighScores.h  ScreenMiniMenu.h  Song.h  StreamDisplay.h  Trail.h  UnlockManager.h
sdks/ITGmania SDK/include/arch/InputHandler/: LinuxInputManager.h
sdks/ITGmania SDK/include/archutils/Unix/: arch_setup.h
sdks/ITGmania SDK/include/archutils/Win32/: arch_setup.h
sdks/ITGmania SDK/lib/: lua-5.1.lib  tomcrypt.lib  tommath.lib
